--- a/one/index.html
+++ b/one/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Legacy WebGL 2</title>
+        <title>One</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
